--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Pandora Price</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-   	<link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+   	<link rel="stylesheet" type = "text/css" href="css/bootstrap/dist/css/bootstrap.min.css" >
 </head>
 <body>
-	<button class="btn primary-btn">wadawdawdawd</button>	
+	<button type="button" onclick="as()" class="btn btn-warning">Warning</button>
 
 
 	<script src="js/jquery.js"></script>
