--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
    	<link rel="stylesheet" type = "text/css" href="css/bootstrap/dist/css/bootstrap.min.css" >
 </head>
 <body>
-	<button type="button" onclick="as()" class="btn btn-warning">Warning</button>
+	
+	<div class="container">		
+		<div class="row">
+			<script type="text/template" id="templateAlarm">
+		        <div class="col-sm-6 col-md-4">		        	
+			        <div class="thumbnail">
+				        <img  style="width: 300px; height: 200px;" src="<%=src%>">
+				        <div class="caption">
+					        <h3><%= title %></h3>
+					        <p><%= description%></p>
+					        <p><a href="#" class="btn btn-primary" role="button">Button</a>
+				        </div>
+			        </div>		          
+		    	</div>  
+		    </script>      
+      	</div>  
+      	
+	</div>
 
 
 	<script src="js/jquery.js"></script>
