--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
    	<link rel="stylesheet" type = "text/css" href="css/bootstrap/dist/css/bootstrap.min.css" >
 </head>
 <body>
-	
-	<div class="container">		
+	<div class="container">
+		
+		<div class="nav sidebar">
+			<script type="text/template" id="listAlarm">				
+				<a href="<%= href %>"><%= title %></a>				
+			</script>
+		</div>
+		
 		<div class="row">
 			<script type="text/template" id="templateAlarm">
-		        <div class="col-sm-6 col-md-4">		        	
 			        <div class="thumbnail">
-				        <img  style="width: 300px; height: 200px;" src="<%=src%>">
+				        <img  src="<%=src%>">
 				        <div class="caption">
 					        <h3><%= title %></h3>
 					        <p><%= description%></p>
-					        <p><a href="#" class="btn btn-primary" role="button">Button</a>
+					        <p><a href="<%= href %>" class="btn btn-primary" role="button">Button</a>
 				        </div>
-			        </div>		          
-		    	</div>  
+			        </div>		           
 		    </script>      
-      	</div>  
-      	
+	    </div>  
 	</div>
 
 
 	<script src="js/jquery.js"></script>
 	<script src="js/underscore.js"></script>
 	<script src="js/backbone.js"></script>
-	<script src="js/main.js"></script>	
+	<script src="js/app.js"></script>	
 </body>
 </html>
