--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		
 		<div class="nav sidebar">
 			<script type="text/template" id="listAlarm">				
-				<a href="" onclick = "listRout.navigate('<%= href %>', {trigger: true, replace: true})"><%= title %></a>				
+				<a href="" onclick = "listRout.navigate('<%= href %>', {trigger: true})"><%= title %></a>				
 			</script>
 		</div>
 		
@@ -22,7 +22,7 @@
 				        <div class="caption">
 					        <h3><%= title %></h3>
 					        <p><%= description%></p>
-					        <p><a href="" onclick = "listRout.navigate('<%= href %>', {trigger: true, replace: true})" class="btn btn-primary" role="button">Button</a>
+					        <p><a href="" onclick = "listRout.navigate('<%= href %>', {trigger: true})" class="btn btn-primary" role="button">Button</a>
 				        </div>
 			        </div>		           
 		    </script>      
