#3 Edited View one model
Edited using the template

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 			        </div>		           
 		    </script>      
 	    </div>  
+	    <div class="oneModel">
+	    	<script id="oneModelTemplate">
+	    		<h2><%= title %></h2>
+	    		<canvas id="chartAlarm" height="400" width="600"></canvas>
+	    		<p><%= description %></p>
+	    		<a href="/">На головну</a>
+	    	</script>
+	    </div>
 
 	</div>
 
