--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Pandora Price</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-   	<link rel="stylesheet" type = "text/css" href="css/bootstrap/dist/css/bootstrap.min.css" >
+   	<link rel="stylesheet" type = "text/css" href="css/bootstrap/dist/css/bootstrap.min.css">
+   	<script src="js/chart.js"></script>	
 </head>
 <body>
 	<div class="container">
@@ -27,14 +28,14 @@
 			        </div>		           
 		    </script>      
 	    </div>  
-	    <div class="oneModel">
-	    	<script id="oneModelTemplate">
+	    
+	    	<script type="text/template" id="oneModelTemplate">
 	    		<h2><%= title %></h2>
 	    		<canvas id="chartAlarm" height="400" width="600"></canvas>
 	    		<p><%= description %></p>
 	    		<a href="/">На головну</a>
 	    	</script>
-	    </div>
+	   
 
 	</div>
 
